--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ https://stackoverflow.com/questions/17318170/highlighting-the-current-page-in-a-
 .parallax{
 
     background-image: url(../../assets/images/background.jpg);
-    min-height:900px;
+    min-height:100vh;
 }
 
 .parallax{
@@ -66,19 +66,27 @@ https://stackoverflow.com/questions/17318170/highlighting-the-current-page-in-a-
 }
 
 .text-field{
-    width: 350px;
-    min-height: 350px;
-    position:relative;
-    top:75px;
-    left:75px;
+    position: relative;
+    display:inline-block;
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 60px;
     padding: 20px;
     text-align: center;
     font-size: 25px;
+    width:400px;
     box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, .5);
-    min-width: 300px;
+    margin-left:10px 10px;
+}
+
+#main .row{
+    margin-top:8%;
+}
+#dogwash img{
+    height:300px;
+    margin-left:5px;
+    margin:60px;
+    display:inline-block;
 }
 
 
@@ -100,7 +108,7 @@ https://stackoverflow.com/questions/17318170/highlighting-the-current-page-in-a-
     box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, .5);
     text-align: left;
     margin-bottom:150px;
-    margin-right:20%;
+    margin-right:2%;
     justify-content: space-around;
 }
 
@@ -109,12 +117,13 @@ https://stackoverflow.com/questions/17318170/highlighting-the-current-page-in-a-
 }
 
 #prices-banner .price{
-  
+    flex: 0 0 33.666667%;
+    max-width: 32.666667%;
     text-align: center;
 
 }
 #prices-banner hr{
-   border: 2px solid white;
+    border: 2px solid white;
 }
 
 /*--------------------------------------Footer---------------------------- */
@@ -213,6 +222,22 @@ button:focus {
     .nav-link{
         text-align:right;
     }
+    .text-field{
+        margin:0 auto;
+    }
+
+    #main .row{
+        margin-top:8%;
+    }
+    #dogwash{
+        height:300px;
+        margin:0 auto;
+    }
+    #dogwash img {
+        margin:30px 0;
+        
+    }
+
     
 }
 /*-----------------------Tablet size screen--------------------------*/
@@ -241,5 +266,22 @@ button:focus {
         font-size: 21px;
         left:25px;
     }
-   
+    #dogwash{
+        margin-bottom:20px;
+    }
+}
+@media only screen and (max-width: 768px){
+
+    .text-field{
+        position: relative;
+        margin-left:10px 10px;
+    }
+
+    #main .row{
+        margin-top:8%;
+    }
+    #dogwash img{
+        height:300px;
+    }
+
 }
