--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,31 +113,30 @@ https://stackoverflow.com/questions/17318170/highlighting-the-current-page-in-a-
     margin-bottom:150px;
     margin-right:2%;
     margin-left:2%;
+    margin-top:50px;
     justify-content: space-around;
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 60px;
     padding: 20px;
     font-size: 25px;
+   
 }
 #prices-banner ol{
     list-style-type:none;
 }
 
-#prices-banner h1{
-    text-align: center;
-}
+#main img{
+    position:absolute;;
+    width:16em;
+    z-index: 900;
+    left:0;
+    right:0;
+    margin-left: auto;
+    margin-right:auto;
+    top:120px;
 
-#prices-banner .price{
-    flex: 0 0 33.666667%;
-    max-width: 32.666667%;
-    text-align: center;
-
 }
-#prices-banner hr{
-    border: 2px solid white;
-}
-
 /*--------------------------------------Footer---------------------------- */
 
 #footer-row {
@@ -277,6 +276,9 @@ button:focus {
      #prices-banner{
         column-count: 1;
         font-size: 20px;
+        margin-top:50px;
+        margin-left: auto;
+        margin-right: auto;
     }
     
 }
@@ -315,7 +317,12 @@ button:focus {
         margin:40px 5px 80px 5px;
         padding: 20px 5px 50px 5px;
         width:95%;
-        }  
-     
+        } 
+        
+    #main img{
+        width:10em;
+
+} 
+    
 }
 
