--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,8 +143,8 @@ button:focus {
 /*----------------------------------Home Page -----------------------------*/
 
 .parallax{
-
     background-image: url(../../assets/images/background.jpg);
+    min-height:100vh;
     position: relative;
     background-attachment: fixed;
     background-position: center;
@@ -154,7 +154,15 @@ button:focus {
     
 }
 
-#main-banner{
+.home-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width:100%;
+    height:75vh;
+}
+
+.main-message{
     color: white;
     position:relative;
     background-color: rgba(0, 0, 0, 0.5);
@@ -163,46 +171,30 @@ button:focus {
     font-size: 25px;
     padding:2rem;
     width:400px; 
-    margin-left:6rem;
-    margin-top:1rem;  
+    height:350px;
 }
 
-#main-home img{
-    margin-top:30px;
-    margin-bottom: 20px;
-    width: 50%;
-    padding: 19px;
-    padding-left: 40px;
+.home-container img{ 
+    padding:2px;
+    width: 500px;
 }
-
-#main-home{
-    display:flex;
-    width: 100%;
-    align-items: center; 
-    justify-content: center;
-    margin: 0 auto;
-    height:100vh;
-}
-
 
 .text-field h1{
     font-size: 1.8rem;
 }
 
-#main-banner button {
+.main-message span{
     position:absolute;
-    top:20px;
-    height:2.3em;
-   
+    height:38px;
+    left:50%;
+    right:50%;
+    bottom:0;
 }
 
-#main-home i{
-    margin:5px;
+.home-container i{
+    margin:6px;
+    
 }
-
-
-
-
 
 /*--------------------------------------Prices page---------------------------- */
 #prices-banner{
@@ -215,14 +207,12 @@ button:focus {
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 60px;
-    padding: 30px;
-   
+    padding: 30px; 
 }
 
 #prices-banner li{
     list-style-type:none;
     font-size:20px;
-
 }
 #prices-banner .list-item{
     display:flex;
